2004-12-20  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: fix error which prevented &enforce_gcc from working
	properly on 10.2.

2004-12-20  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: unify execute() and execute_script() into execute().
	Scrap execute_script_nonroot_okay().
	* PkgVersion.pm: Adjust run_script() for new execute().

2004-12-20  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Warn is pkgname field of shlibs looks like a
	version-number.

2004-12-20  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Add import for POSIX functions. Move parsing of
	scripts from execute_script() into new prepare_script() function.

2004-12-19  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: recognize 10.3.7

2004-12-18  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm, PkgVersion.pm, Services.pm: Move the code which
	verifies that the gcc version is correct to a new &enforce_gcc
	function in Services.pm.  Make sure that this function does what
	we want it to do for future versions of OS X.

2004-12-15  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Change execute*() to take option=>value hash of
	options instead of parameter-ordered values. Only option is
	'quiet'.
	* Engine.pm: Convert to new Services::execute*() API.

2004-12-09  Daniel Macks  <dmacks@netspace.org>

	* Config.pm, Configure.pm: Verbose=1 *is* desired default.

2004-12-07  Daniel Macks  <dmacks@netspace.org>

	* Config.pm: Default to Verbose=3.

2004-12-07  Daniel Macks  <dmacks@netspace.org>

	* Config.pm, Configure.pm: New Verbose=4 setting.
	* Configure.pm: Default to Verbose=3 (sync with fink.conf manpage).
	* Validation.pm: Require Verbose>3 to do pedantic Description checks.
	
2004-12-06  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Config.pm, Engine.pm, Package.pm PkgVersion.pm, SelfUpdate.pm: 
	Refactor 'UseBinaryDist' to use a new binary_requested function